--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plato-directives",
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0-beta.4",
   "description": "Directives for PLATO",
   "main": "index.js",
   "scripts": {
@@ -28,8 +28,8 @@
   "homepage": "https://github.com/crossjs/directives",
   "devDependencies": {
     "babel-loader": "^6.2.10",
-    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^3.1.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
