--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plato-directives",
+  "name": "directives",
   "version": "3.0.0-beta.7",
   "description": "Directives for PLATO",
   "main": "index.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/crossjs/directives.git"
+    "url": "git+https://github.com/platojs/directives.git"
   },
   "keywords": [
     "plato",
@@ -23,9 +23,9 @@
   "author": "crossjs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/crossjs/directives/issues"
+    "url": "https://github.com/platojs/directives/issues"
   },
-  "homepage": "https://github.com/crossjs/directives",
+  "homepage": "https://github.com/platojs/directives",
   "devDependencies": {
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
