--- a/package.json
+++ b/package.json
@@ -27,35 +27,6 @@
   },
   "homepage": "https://github.com/platojs/directives",
   "devDependencies": {
-    "babel-loader": "^6.2.10",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "^3.1.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "bundle-loader": "^0.5.4",
-    "chai": "^3.5.0",
-    "cross-env": "^3.1.3",
-    "eslint": "^3.12.2",
-    "eslint-config-plato": "^0.0.3",
-    "file-loader": "^0.9.0",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-coverage": "^1.1.1",
-    "karma-es6-shim": "^1.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.1",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.1",
-    "mocha": "^3.2.0",
-    "phantomjs-polyfill": "^0.0.2",
-    "phantomjs-prebuilt": "^2.1.14",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
-    "vue": "^2.1.8",
-    "vue-loader": "^10.0.2",
-    "webpack": "^2.2.0-rc.4",
-    "yargs": "^6.6.0"
+    "plato-dev-dependencies": "latest"
   }
 }
